# multi-agent-calendar-scheduler

./: .env.example  .gitignore  README.md  pyproject.toml
calendar_agent/: __init__.py  main.py  orchestrator.py  types.py
calendar_agent/agents/: __init__.py  cloud_fallback_agent.py  final_verifier_agent.py  planning_agent.py  validator_agent.py  worker_agent.py
calendar_agent/tools/: __init__.py  calendar_api.py
